--- a/about.html
+++ b/about.html
@@ -3,77 +3,123 @@
 
 <head>
   <meta charset="utf-8">
+  <title>Paula Maronese UX/UI</title>
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" "faviconimage32x32" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" "faviconimage16x16" sizes="16x16">
+  <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="preconnect" href="<link rel=" preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+  <!--Header-->
   <header>
-    <div>
-
-
-      <!--Header-->
+    <div class="container">
+      <img src="img/logo.png"alt="logo">
       <nav>
-    <ul>
-      <li><a href="index.html">Work</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+        <ul>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!--End Header-->
+  <main>
+    <div class="section">
+      <div class="container">
+        <h1>About me</h1>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="column">
+            <h2>My Story</h2>
+            <p>
+              Hello! I'm an Industrial Designer and UX / UI. My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make
+              life easier. My past as an industrial designer and researcher at the university gave me a unique vision of user behavior and needs. My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and
+              industrialist to amplify my perspectives within design.
+            </p>
+            <a href="files/Resume.pdf" download>Open my Resume!</a>
+          </div>
+          <div class="column">
+            <img src="img\about\profilepic.png" alt="My Profile">
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <h1>About Me</h1>
+    <div class="section">
+      <div class="container">
+        <h2>Skill & Tools</h2>
+        <div class="row">
+          <div class="column">
+            <h3>Relevant Skills</h3>
+            <ul>
+              <li>Graphic design</li>
+              <li>Industrial design</li>
+              <li>Marketing research</li>
+              <li>Social networks</li>
+              <li>Product handling</li>
+              <li>User research (Competitor SWOT
+                Analysis, Usability Heuristics, User flow)</li>
+              <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
+              <li>Adobe Creative Cloud (Photoshop, XD, inDesign, LightRoom)</li>
+              <li>A / B Preference Testing</li>
+            </ul>
+          </div>
+          <div class="column">
+            <h3>Tools I Use</h3>
+            <ul>
+              <li>Adobe XD</li>
+              <li>Sketch</li>
+              <li>Unsplash</li>
+              <li>CorelDraw</li>
+              <li>Illustrator</li>
+            </ul>
+          </div>
+          <div class="column">
+            <h3>Development Skills</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  						<picture>
-  							<source srcset="img\about\profilepic.png">
-  								<img src="img\about\profilepic.png" alt="My Profile">
-  								</picture>
-  								<!-- For the hero section -->
-  								<h1>My Story</h1>
-  								<div>
-  								</div>
-  								<a href="files/Resume.pdf" download>Open my Resume!</a>
-  								<!-- For your work/projects -->
-  								<div>
-  									<h2>Skill & Tools</h2>
-  									<h3>Relevant Skills</h3>
-  									<ul>
-  										<li>Graphic design</li>
-  										<li>Industrial design</li>
-  										<li>Marketing research</li>
-  										<li>Social networks</li>
-  										<li>Product handling</li>
-  										<li>User research (Competitor SWOT
-Analysis, Usability Heuristics, User flow)</li>
-  										<li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
-                      <li>Adobe Creative Cloud (Photoshop, XD, inDesign, LightRoom)</li>
-                      <li>A / B Preference Testing</li>
-  									</ul>
-  								</div>
-  								<div>
-  									<h3>Tools I Use</h3>
-  									<ul>
-  										<li>Adobe XD</li>
-  										<li>Sketch</li>
-  										<li>Unsplash</li>
-                      <li>CorelDraw</li>
-                      <li>Illustrator</li>
-  									</ul>
-  									<h3>Development Skills</h3>
-  									<ul>
-  										<li>HTML</li>
-  										<li>CSS</li>
-  									</ul>
-  								</div>
-  								<!-- end work/projects -->
+    <!-- end work/projects -->
+  </main>
+  <!--Footer-->
+  <footer>
+    <div class="container">
+      <h2>Get in Touch</h2>
+      <p>
+        Did you like my work and do you want to contact me? Please do so through:
+      </p>
 
-                  <!--Footer-->
-                  <footer>
-                    <div>
-                      <h2>Get in Touch</h2>
-                      <p>Did you like my work and do you want to contact me? Please do so through:</p>
+      <!--Social Media Links-->
+      <div class="social">
+        <a href="mailto:paula.maronese@gmail.com">Email me</a>
+      </div>
+      <div class="social">
+        <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
+      </div>
 
+      <p>Copyright Maronese Paula 2020</p>
+    </div>
+  </footer>
+  <!--End Footer-->
+</body>
 
-
-
-                </html>
+</html>
