--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" "faviconimage32x32" sizes="32x32">
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" "faviconimage16x16" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="preconnect" href="<link rel=" preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -21,12 +20,12 @@
   <!--Header-->
   <header>
     <div class="container">
-      <img src="img/logo.png" class="logo">
+      <img src="img/logopm.png" class="logo">
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#footer">Contact</a></li>
+          <li><a href="index.html" class="mainbutton">Work</a></li>
+          <li><a href="about.html" class="mainbutton">About</a></li>
+          <li><a href="#contact" class="mainbutton">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -61,13 +60,13 @@
             <p>
               When I started my immersion course at CareerFoundry I had to design a music application from scratch. Connect users to their favorite bands, dream playlists, podcasts to learn, and much more.
             </p>
-            <a href="musicapp.html" class="button">Read More</a>
+            <a href="musicapp.html" class="button readmore">Read More</a>
           </div>
         </div>
 
         <div class="row">
           <div class="column">
-            <img src="img/must-go@2.png""Mustgo Muckup">
+            <img src="img/must-go@2.png" alt="Mustgo Muckup">
           </div>
           <div class="column">
             <h3>MustGo!</h3>
@@ -75,41 +74,37 @@
               As I progressed through the course, I dabbled in various application options that we all use on a daily basis and since I have been traveling around the world for as long as I have a notion, this was one of the applications that I liked
               doing the most.
             </p>
-            <a href="travelapp.html" class="button">Read More</a>
+            <a href="travelapp.html" class="button readmore">Read More</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="column">
+            <img src="img/summitbank/summitbank.png" alt="Summit Muckup">
+          </div>
+          <div class="column">
+            <h3>Summit Bank!</h3>
+            <p>
+              This was the last application that I designed for the CareerFoundry UI course, without a doubt it was the most complete as it covered each of my skills.
+            </p>
+            <a href="summitbank.html" class="button readmore">Read More</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="column">
+            <img src="img/powapp/powapp.png" alt="PowApp Muckup">
+          </div>
+          <div class="column">
+            <h3>Sport app!</h3>
+            <p>
+              One of the tasks asked me to design an app about something that represents me, I chose a sports app because I am constantly trying new ones for myself, and I always find that I am not satisfied with just one, but two or three, I would
+              choose the best functions and I would bring them together, and that's what I did here.
+            </p>
+            <a href="sportapp.html" class="button readmore">Read More</a>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="column">
-        <img src="img/summitbank/summitbank.png" "Summit Muckup">
-      </div>
-      <div class="column">
-        <h3>Summit Bank!</h3>
-        <p>
-          This was the last application that I designed for the CareerFoundry UI course, without a doubt it was the most complete as it covered each of my skills.
-        </p>
-        <a href="summitbank.html" class="button">Read More</a>
-      </div>
-    </div>
-    </div>
-    </div>
-
-    <div class="row">
-      <div class="column">
-        <img src="img/powapp/powapp.png" "PowApp Muckup">
-      </div>
-      <div class="column">
-        <h3>Sport app!</h3>
-        <p>
-          One of the tasks asked me to design an app about something that represents me, I chose a sports app because I am constantly trying new ones for myself, and I always find that I am not satisfied with just one, but two or three, I would
-          choose the best functions and I would bring them together, and that's what I did here.
-        </p>
-        <a href="sportapp.html" class="button">Read More</a>
-      </div>
-    </div>
-    </div>
     </div>
 
     <!--End Work-->
@@ -117,20 +112,20 @@
   <!--Footer-->
   <footer>
     <div class="container">
-      <h4>Get in Touch</h4>
+      <h2>Get in Touch</h2>
       <p>
         Did you like my work and do you want to contact me? Please do so through:
       </p>
 
       <!--Social Media Links-->
-      <div id="footer">
+      <div id="contact">
         <div class="social">
-          <a href="mailto:paula.maronese@gmail.com" class="button">Email me</a>
+          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
         </div>
         <div class="social">
-          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
-          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
+          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
         <p>Copyright Maronese Paula 2020</p>
