--- a/sportapp.html
+++ b/sportapp.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="preconnect" href="<link rel=" preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -47,7 +46,7 @@
         <div class="social">
           <a href="mailto:paula.maronese@gmail.com" class="email">Email me</a>
         </div>
-        <div class="social">
+        <div id="contact">
           <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
           <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
