--- a/about.html
+++ b/about.html
@@ -4,33 +4,35 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" "faviconimage32x32" sizes="32x32">
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" "faviconimage16x16" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="preconnect" href="<link rel=" preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+
   <!--Header-->
   <header>
     <div class="container">
-      <img src="img/logo.png"alt="logo">
+      <img src="img/logopm.png" class="logo">
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html" class="mainbutton">Work</a></li>
+          <li><a href="about.html" class="mainbutton">About</a></li>
+          <li><a href="#contact" class="mainbutton">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <!--End Header-->
+
+
   <main>
     <div class="section">
       <div class="container">
@@ -50,7 +52,7 @@
             <a href="files/Resume.pdf" download>Open my Resume!</a>
           </div>
           <div class="column">
-            <img src="img\about\profilepic.png" alt="My Profile">
+            <img src="img\about\profilepic.png" class="profile" alt="My Profile">
           </div>
         </div>
       </div>
@@ -98,6 +100,7 @@
 
     <!-- end work/projects -->
   </main>
+
   <!--Footer-->
   <footer>
     <div class="container">
@@ -107,19 +110,21 @@
       </p>
 
       <!--Social Media Links-->
-      <div class="social">
-        <a href="mailto:paula.maronese@gmail.com">Email me</a>
-      </div>
-      <div class="social">
-        <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
-        <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
-        <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
-      </div>
+      <div id="contact">
+        <div class="social">
+          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
+        </div>
+        <div class="social">
+          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+        </div>
 
-      <p>Copyright Maronese Paula 2020</p>
-    </div>
+        <p>Copyright Maronese Paula 2020</p>
+      </div>
   </footer>
   <!--End Footer-->
+
 </body>
 
 </html>
