--- a/summitbank.html
+++ b/summitbank.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="preconnect" href="<link rel=" preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -89,7 +88,7 @@
             </p>
 
             <!--Social Media Links-->
-            <div id="footer">
+            <div id="contact">
               <div class="social">
                 <a href="mailto:paula.maronese@gmail.com" class="email">Email me</a>
               </div>
