--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <img src="img/logopm.png" class="logo">
       <nav>
         <ul>
-          <li><a href="index.html" class="mainbutton">Work</a></li>
-          <li><a href="about.html" class="mainbutton">About</a></li>
-          <li><a href="#contact" class="mainbutton">Contact</a></li>
+          <li><a href="index.html">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
