--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       <div class="container">
         <h2>Skill & Tools</h2>
         <div class="row">
-          <div class="column">
+          <div class="col-md-6">
             <h3>Relevant Skills</h3>
             <ul>
               <li>Graphic design</li>
@@ -77,7 +77,7 @@
               <li>A / B Preference Testing</li>
             </ul>
           </div>
-          <div class="column">
+          <div class="col-md-6">
             <h3>Tools I Use</h3>
             <ul>
               <li>Adobe XD</li>
