--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
   <!--Header-->
   <header>
     <div class="container">
-            <div class="logo">
-        				<a href="index.html">
-        					<img src="img/logopm.png" alt="Paula Maronese">
-        				</a>
-        			</div>
-
-        <ul class= "nav-links">
-          <li><a href="index.html">Work</a></li>
+        <a href="index.html"><img src="img/logopm.png" class="logo"></a>
+      <nav>
+        <ul>
+        <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -41,8 +37,8 @@
     <!--Hero-->
 <div id="hero">
       <div class="container">
-        <h1>Hello, I’m Paula.
-          <span></span>
+        <h1>Hello
+          <span>I’m Paula.</span>
         </h1>
         <p>
         I'm Industrial & UX/UI designer who creates digital products with knowledge and passion.
@@ -64,7 +60,7 @@
             <p>
               When I started my immersion course at CareerFoundry I had to design a music application from scratch. Connect users to their favorite bands, dream playlists, podcasts to learn, and much more.
             </p>
-            <a href="musicapp.html" class="button readmore">Read More</a>
+            <a href="musicapp.html" class="button readmore">Coming soon!</a>
           </div>
         </div>
 
@@ -78,7 +74,7 @@
               As I progressed through the course, I dabbled in various application options that we all use on a daily basis and since I have been traveling around the world for as long as I have a notion, this was one of the applications that I liked
               doing the most.
             </p>
-            <a href="travelapp.html" class="button readmore">Read More</a>
+            <a href="travelapp.html" class="button readmore">Coming soon!</a>
           </div>
         </div>
 
@@ -105,7 +101,7 @@
               One of the tasks asked me to design an app about something that represents me, I chose a sports app because I am constantly trying new ones for myself, and I always find that I am not satisfied with just one, but two or three, I would
               choose the best functions and I would bring them together, and that's what I did here.
             </p>
-            <a href="sportapp.html" class="button readmore">Read More</a>
+            <a href="sportapp.html" class="button readmore">Coming soon!</a>
           </div>
         </div>
       </div>
