--- a/summitbank.html
+++ b/summitbank.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" "faviconimage32x32" sizes="32x32">
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" "faviconimage16x16" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -20,10 +20,10 @@
   <!--Header-->
   <header>
     <div class="container">
-      <img src="img/logo.png" class="logo">
+        <a href="index.html"><img src="img/logopm.png" class="logo"></a>
       <nav>
         <ul>
-          <li><a href="index.html">Work</a></li>
+        <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -31,6 +31,7 @@
     </div>
   </header>
   <!--End Header-->
+
 
   <main>
 
@@ -41,9 +42,15 @@
           <span>a bank account so save and beyond.</span>
         </h1>
         <p>
-          Our mission: Help clients save money, invest correctly, and organize their finances. This is an online bank account, but not just any one. It is a personal account, designed for you, for the way you live today. With summit app, you will
-          receive instant notifications of your expenses, you can control how much you spend, where you spend it, and see your salary instantly. We help you save: That's right, you will have accounts -in your account-, where you can set aside money
-          for whatever you want, "hiding" it from your card!
+          Our mission: Help clients save money, invest correctly, and organize their finances.
+        </p>
+        <p>
+        This is an online bank account, but not just any one. It is a personal account, designed for you, for the way you live today. With summit app, you will
+          receive instant notifications of your expenses, you can control how much you spend, where you spend it, and see your salary instantly.
+        </p>
+          <p>
+        We help you save: That's right, you will have accounts -in your account-, where you can set aside money
+        for whatever you want, "hiding" it from your card!
         </p>
       </div>
     </div>
@@ -80,9 +87,10 @@
         <a href="https://www.behance.net/gallery/109165519/Summit-Bank-app" target="_blank">Read More</a>
         <!--End Hero-->
 
+        <!--Footer-->
         <footer>
           <div class="container">
-            <h4>Get in Touch</h4>
+            <h2>Get in Touch</h2>
             <p>
               Did you like my work and do you want to contact me? Please do so through:
             </p>
@@ -90,12 +98,12 @@
             <!--Social Media Links-->
             <div id="contact">
               <div class="social">
-                <a href="mailto:paula.maronese@gmail.com" class="email">Email me</a>
+                <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
               </div>
               <div class="social">
-                <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
+                <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+                <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
               </div>
 
               <p>Copyright Maronese Paula 2020</p>
