--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <!--Header-->
   <header>
     <div class="container">
-      <img src="img/logopm.png" class="logo">
+        <a href="index.html"><img src="img/logopm.png" class="logo"></a>
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -42,7 +42,7 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="column">
+                    <div class="column col-md-6">
             <h2>My Story</h2>
             <p>
               Hello! I'm an Industrial Designer and UX / UI. My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make
@@ -51,7 +51,7 @@
             </p>
             <a href="files/Resume.pdf" download>Open my Resume!</a>
           </div>
-          <div class="column">
+          <div class="column col-md-6">
             <img src="img\about\profilepic.png" class="profile" alt="My Profile">
           </div>
         </div>
@@ -62,7 +62,7 @@
       <div class="container">
         <h2>Skill & Tools</h2>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <h3>Relevant Skills</h3>
             <ul>
               <li>Graphic design</li>
@@ -77,7 +77,7 @@
               <li>A / B Preference Testing</li>
             </ul>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <h3>Tools I Use</h3>
             <ul>
               <li>Adobe XD</li>
@@ -87,7 +87,7 @@
               <li>Illustrator</li>
             </ul>
           </div>
-          <div class="column">
+          <div class="coulmn col-md-4">
             <h3>Development Skills</h3>
             <ul>
               <li>HTML</li>
