--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--End Hero-->
 
     <!--Work-->
-    <div class="work">
+    <div class="work" id="work">
       <div class="container">
         <h2>My Work</h2>
         <div class="row">
