--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     </div>
     <div class="section">
       <div class="container">
-        <div class="row">
+        <div class="row story">
                     <div class="column col-md-6">
             <h2>My Story</h2>
             <p>
