--- a/summitbank.html
+++ b/summitbank.html
@@ -20,12 +20,13 @@
   <!--Header-->
   <header>
     <div class="container">
-        <a href="index.html"><img src="img/logopm.png" class="logo"></a>
+      <a href="index.html"><img src="img/logopm.png" class="logo"></a>
       <nav>
         <ul>
-        <li><a href="index.html">Work</a></li>
+          <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
     </div>
@@ -45,12 +46,12 @@
           Our mission: Help clients save money, invest correctly, and organize their finances.
         </p>
         <p>
-        This is an online bank account, but not just any one. It is a personal account, designed for you, for the way you live today. With summit app, you will
+          This is an online bank account, but not just any one. It is a personal account, designed for you, for the way you live today. With summit app, you will
           receive instant notifications of your expenses, you can control how much you spend, where you spend it, and see your salary instantly.
         </p>
-          <p>
-        We help you save: That's right, you will have accounts -in your account-, where you can set aside money
-        for whatever you want, "hiding" it from your card!
+        <p>
+          We help you save: That's right, you will have accounts -in your account-, where you can set aside money
+          for whatever you want, "hiding" it from your card!
         </p>
       </div>
     </div>
