--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
-<div class="navtoggle" id="myNavtoggle">
+  <div class="navtoggle" id="myNavtoggle">
+
 </head>
 
 <body>
@@ -35,101 +36,120 @@
   </header>
   <!--End Header-->
 
-
   <main>
-    <div class="section">
+
+    <!--Hero-->
+
+
+    <main>
+      <div id="hero">
+        <div class="container">
+          <h1>Know me better</h1>
+        </div>
+      </div>
+      <div class="section">
+        <div class="container">
+          <div class="row story">
+            <div class="column col-md-6">
+              <h2>A bit of background</h2>
+              <p>
+                Hello! I'm an Industrial Designer and UX / UI.
+              </p>
+
+              <p>
+                My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make life easier. My past as an industrial designer
+                and researcher at the university gave me a unique vision of user behavior and needs.
+              </p>
+
+              <p>
+                My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and industrialist to amplify my perspectives within design.
+              </p>
+
+              <a href="files/Resume.pdf" download target=”_blank”>See my resume here</a>
+            </div>
+            <div class="column col-md-6">
+              <img src="img\about\profilepic.png" class="profile" alt="My Profile">
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="container">
-        <h1>About me</h1>
+        <img src="img\about\designprocess.png" class="img" alt="designprocess">
       </div>
-    </div>
-    <div class="section">
+
+
+      <div class="section">
+        <div class="container">
+          <h2>Skill & Tools</h2>
+          <div class="row">
+            <div class="col-md-4">
+              <h3>Relevant Skills</h3>
+              <ul>
+                <li>Graphic design</li>
+                <li>Industrial design</li>
+                <li>Marketing research</li>
+                <li>Social networks</li>
+                <li>Product handling</li>
+                <li>User research (Competitor SWOT Analysis, Usability Heuristics, User flow)</li>
+                <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
+                        <li>A / B Preference Testing</li>
+              </ul>
+            </div>
+
+            <div class="col-md-4">
+              <h3>Tools I Use</h3>
+              <ul>
+                <li>Adobe XD</li>
+                <li>Sketch</li>
+                <li>Unsplash</li>
+                <li>CorelDraw</li>
+                <li>Illustrator</li>
+              </ul>
+            </div>
+
+            <div class="coulmn col-md-4">
+              <h3>Coding</h3>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- end work/projects -->
+    </main>
+
+    <!--Footer-->
+    <footer>
       <div class="container">
-        <div class="row story">
-          <div class="column col-md-6">
-            <h2>My Story</h2>
-            <p>
-              Hello! I'm an Industrial Designer and UX / UI. My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make
-              life easier. My past as an industrial designer and researcher at the university gave me a unique vision of user behavior and needs. My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and
-              industrialist to amplify my perspectives within design.
-            </p>
-            <a href="files/Resume.pdf" download>Open my Resume!</a>
-          </div>
-          <div class="column col-md-6">
-            <img src="img\about\profilepic.png" class="profile" alt="My Profile">
-          </div>
-        </div>
-      </div>
-    </div>
+        <div class="navtoggle" id="myNavtoggle">
+          <h2>Get in Touch</h2>
+          <p>
+            Did you like my work and do you want to contact me? Please do so through:
+          </p>
 
-    <div class="section">
-      <div class="container">
-        <h2>Skill & Tools</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <h3>Relevant Skills</h3>
-            <ul>
-              <li>Graphic design</li>
-              <li>Industrial design</li>
-              <li>Marketing research</li>
-              <li>Social networks</li>
-              <li>Product handling</li>
-              <li>User research (Competitor SWOT
-                Analysis, Usability Heuristics, User flow)</li>
-              <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
-              <li>Adobe Creative Cloud (Photoshop, XD, inDesign, LightRoom)</li>
-              <li>A / B Preference Testing</li>
-            </ul>
+          <!--Social Media Links-->
+          <div id="contact">
+            <div class="social">
+              <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
+            </div>
+            <div class="social">
+              <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+              <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+              <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+            </div>
+
+            <p>Copyright Maronese Paula 2020</p>
           </div>
-          <div class="col-md-4">
-            <h3>Tools I Use</h3>
-            <ul>
-              <li>Adobe XD</li>
-              <li>Sketch</li>
-              <li>Unsplash</li>
-              <li>CorelDraw</li>
-              <li>Illustrator</li>
-            </ul>
-          </div>
-          <div class="coulmn col-md-4">
-            <h3>Development Skills</h3>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- end work/projects -->
-  </main>
-
-  <!--Footer-->
-  <footer>
-    <div class="container">
-      <div class="navtoggle" id="myNavtoggle">
-      <h2>Get in Touch</h2>
-      <p>
-        Did you like my work and do you want to contact me? Please do so through:
-      </p>
-
-      <!--Social Media Links-->
-      <div id="contact">
-        <div class="social">
-          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-        </div>
-        <div class="social">
-          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-        </div>
-
-        <p>Copyright Maronese Paula 2020</p>
-      </div>
-  </footer>
-  <!--End Footer-->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
+    </footer>
+    <!--End Footer-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
