--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section">
         <div class="container">
           <h1>Hello!
-            <span>1...2...3I’m Paula</span>
+            <span>I’m Paula</span>
           </h1>
           <p>
             I'm Industrial & UX/UI designer who creates digital products with knowledge and passion.
