--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
-  <div class="navtoggle" id="myNavtoggle">
+
 
 </head>
 
@@ -26,7 +26,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html" class="active">About</a></li>
             <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
@@ -40,8 +40,6 @@
 
     <!--Hero-->
 
-
-    <main>
       <div id="hero">
         <div class="container">
           <h1>Know me better</h1>
