--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
-  <div class="navtoggle" id="myNavtoggle">
 
 </head>
 
@@ -25,7 +24,7 @@
         <a href="index.html"><img src="img/logopm.png" class="logo"></a>
         <nav>
           <ul>
-            <li><a href="index.html">Work</a></li>
+            <li><a href="index.html" class="active">Work</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
@@ -40,8 +39,8 @@
 
     <!--Hero-->
     <div id="hero">
-      <div class="section">
-        <div class="container">
+      <div class="section home">
+                <div class="container">
           <h1>Hello!
             <span>I’m Paula</span>
           </h1>
